fix: fix list and list-note overflow on mobile:  pos to fixed,top to 0. margin-top h1  swap by padding-top

--- a/codejam/gem-puzzle/styles.scss
+++ b/codejam/gem-puzzle/styles.scss
@@ -8,10 +8,11 @@
 
 body {
     margin: 0;
-    padding: 0;
+    padding: 20px 0px 20px 0px;
+
     overflow-x:hidden;
     width: 100%;
-    height: 100%;
+    //height: 100%;
     min-height: 100vh;
     background: url('assets/img/bg-puzzle_1.webp') center/cover;
 }
@@ -20,6 +21,7 @@ html {
     font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
+    
     font-size: 16px;
     font-weight: 600;
     text-shadow: 0 0 22px black;
@@ -27,7 +29,7 @@ html {
 }
 
 h1 {
-    margin: 20px 20px auto;
+    margin: 0px 20px auto;
     text-align: center;
     color:white;
     text-shadow:0 0 9px rgba(252, 235, 6, 0.986);
@@ -444,9 +446,9 @@ $size: 4;
     }
 }
 .top-list-cover {
-    position: absolute;
+    position: fixed;
     top: 0px;
-    left: 0;
+    
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.4);
